--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,12 +39,13 @@ layout: default
 
 <section>
   <div>Share: </div>
-  <a 
+  <a
     href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" 
     rel="nofollow" 
     target="_blank"
     title="Share on Facebook"
-    class="fa fa-facebook-square fa-3x" 
+    class="fa fa-facebook-square fa-3x"
+    style="color: #3b5998"
   ></a>
   <a 
     href="https://twitter.com/intent/tweet?text={{ page.title | url_encode }}+{{ site.url }}{{ page.url }}" 
@@ -52,13 +53,15 @@ layout: default
     target="_blank"
     title="Share on Twitter"
     class="fa fa-twitter-square fa-3x"
+    style="color: #00acee"
   ></a>
   <a
     href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url }}"
     rel="nofollow"
     target="_blank"
     title="Share on Linkedin"
-    class="fa fa-linkedin-square fa-3x" 
+    class="fa fa-linkedin-square fa-3x"
+    style="color: #0e76a8"
   ></a>
 </section>
 
