--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,5 +1,4 @@
-<section>
-  <div>Share: </div>
+<section style="margin-top: 19.92px;">
   <a
     href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}"
     rel="nofollow"
@@ -25,8 +24,10 @@
     style="color: #0e76a8"
   ></a>
   <a href="javascript:sendLinkKakao()" title="Share on Kakao">
-    <img src="../assets/kakaotalk.png" width=41.15
-         style="float: left; margin: 3px 5px 0px 0px"/>
+    <img
+      src="../assets/kakaotalk.png"
+      width=41.15
+      style="float: left; margin: 3px 5px 0px 0px"/>
   </a>
 </section>
 
