refactor: 스타일 css 파일로 분리
 - post-footer, tags, shares 클래스 사용

--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,4 +1,11 @@
-<section style="margin-top: 19.92px;">
+<div class="shares">
+  <a href="javascript:sendLinkKakao()" title="Share on Kakao">
+    <img
+      src="../assets/kakaotalk.png"
+      width=41.16
+      style="margin-top: 3px"
+    />
+  </a>
   <a
     href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}"
     rel="nofollow"
@@ -23,13 +30,7 @@
     class="fa fa-linkedin-square fa-3x"
     style="color: #0e76a8"
   ></a>
-  <a href="javascript:sendLinkKakao()" title="Share on Kakao">
-    <img
-      src="../assets/kakaotalk.png"
-      width=41.15
-      style="float: left; margin: 3px 5px 0px 0px"/>
-  </a>
-</section>
+</div>
 
 <script>
   Kakao.init('2ac8604fec8c55ca9524a6e25c4677ad');
