--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,8 +25,8 @@ layout: default
   </div>
 
   <br>
-  <div style="display: flex; flex-direction: row; justify-content: space-between;">
-    <div>
+  <div class="post-footer">
+    <div class="tags">
       <h2>Tags</h2>
       {% for tag in page.tags %}
         {% if tag == page.name %}
